--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-numpy: 1.26.4
-pandas: 2.2.3
-opencv-python: 4.11.0
-matplotlib: 3.9.2
-seaborn: 0.13.2
-tensorflow: 2.18.0
-keras: 3.6.0
-scikit-learn: 1.6.1
-fastapi: 0.115.11
-uvicorn: 0.34.0
-Pillow: 10.4.0
+pandas==2.2.2
+numpy==1.26.4
+xgboost==2.1.1
+scikit-learn==1.4.2
+matplotlib==3.9.0
+seaborn==0.13.2
+streamlit==1.36.0
