--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas==2.2.2
-numpy==1.26.4
-xgboost==2.1.1
-scikit-learn==1.4.2
 matplotlib==3.9.0
 seaborn==0.13.2
-streamlit==1.36.0
+streamlit==1.38.0
+pandas==2.2.3
+plotly==5.24.1
+scikit-learn==1.5.2
+xgboost==2.1.1
+numpy==1.26.4
